Changes for 3.4.9rc1

New features:

Bug fixes:
..F....... [ZBX-13560] fixed acknowledge notifications are visible in popup (agriscenko)
..F....... [ZBX-13298] fixed missing graph after faulty graph edit form submission (nikita)

--------------------------------------------------------------------------------
Changes for 3.4.8

3.4.8rc1 was released as 3.4.8 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.8rc1

New features:
..F....... [ZBXNEXT-4374] implemented the widget configuration fields clearing when changing the type (ashubin)
..F....... [ZBXNEXT-4045] implemented maximum size for graphs in widgets (gcalenko)
A.F....... [ZBX-1357] enabled Hebrew translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), French, German, Hebrew, Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-13542] fixed http steps on template not inheriting hosts application setting (nikita)
..F....... [ZBX-13618] fixed wrong variables order in translatable error message (nikita)
..F....... [ZBX-13344] fixed default condition for trigger based actions (agriscenko)
........S. [ZBX-13613] improved a history syncer when backend elasticsearch is not available (MVekslers)
...G...... [ZBX-13544] fixed agent crashes when using regex with 'Log' item for Mac OSX (MVekslers)
........S. [ZBX-13611] fixed lld rules not always saving their state/error message changes (wiper)
........S. [ZBX-13571] fixed regression that resulted in slow history data queries on partitioned tables (wiper)
A.F....... [ZBX-13424] added possibility to select web items as master items and improved copying of dependent items to destination hosts and templates (Ivo)